HelpMePlay | 1.1.1
	Fixes and Updates:
		- Updated Party Play to include auto sharing quests.
		- Updated Emotes automation to include the ability to emote based on target OR gossip, opposed to gossip only.
		- Updated the settings menu so it can't be opened in combat.
		- Fixed a bug that would cause the addon not to choose a quest reward if both items didn't belong to a slot and sold for the same amount. Quest rewards that fit this description are now chosen at random.