@@ -77,44 +77,39 @@
 					<Anchor point="TOPLEFT" x="221" y="-137" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPQuestRewardsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPToFCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="221" y="-175" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPToFCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPNotesCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="221" y="-213" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPNotesCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPTalentsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="221" y="-251" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPTalentsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPCinematicsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="221" y="-289" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPCinematicsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPQueuesCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="371" y="-61" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPQueuesCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPPartyPlayCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="371" y="-99" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPPartyPlayCB" inherits="UICheckButtonTemplate" text="CheckButton1">
-				<Anchors>
-					<Anchor point="TOPLEFT" x="371" y="-137" />
-				</Anchors>
-			</CheckButton>
 			<CheckButton name="HMPMinimapIconCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
-					<Anchor point="TOPLEFT" x="371" y="-175" />
+					<Anchor point="TOPLEFT" x="371" y="-137" />
 				</Anchors>
 			</CheckButton>
 			<Frame name="HMPChromieTimeDropDown" inherits="UIDropDownMenuTemplate" enableMouse="true">
@@ -243,14 +238,6 @@
 					<Size x="99" y="20" />
 					<Anchors>
 						<Anchor point="LEFT" relativeTo="HMPQuestsCB" relativePoint="LEFT" x="4" />
-					</Anchors>
-					<FontHeight val="12" />
-					<Color r="1" g="1" b="1" />
-				</FontString>
-				<FontString name="HMPQuestRewardsText" inherits="GameFontNormal" font="Fonts\2002.ttf" text="Quest Rewards" justifyH="CENTER" justifyV="CENTER">
-					<Size x="92" y="20" />
-					<Anchors>
-						<Anchor point="LEFT" relativeTo="HMPQuestRewardsCB" relativePoint="LEFT" x="30" />
 					</Anchors>
 					<FontHeight val="12" />
 					<Color r="1" g="1" b="1" />
